Break page load metrics test dependency on IPC.

This change breaks direct dependencies on IPC for page load metrics
tests, in order to ease the transition to mojo.

Previously, unit tests exercised the IPC dispatch path. This
achieved slightly increased coverage but coupled unit tests to
IPC. We now dispatch simulated timing events directly to callbacks,
bypassing the IPC dispatch.

Additionally, we break the browsertest dependency on IPC and add
a MetricsWebContentsObserver::TestingObserver, which can observe
state changes at the observer level, instead of watching for IPC
messages. This both simplifies the logic and more directly verifies
expected behavior at the appropriate level.

BUG=715744
TBR=csharrison

Review-Url: https://codereview.chromium.org/2847513002
Cr-Commit-Position: refs/heads/master@{#467687}

Former-commit-id: 9567f9fa3fcfcaa50fc7b6a6adf66106a2eb6be5