chrome/browser/page_load_metrics/observers/page_load_metrics_observer_test_harness.cc
@@ -144,9 +144,7 @@ void PageLoadMetricsObserverTestHarness::SimulateTimingUpdate(
 void PageLoadMetricsObserverTestHarness::SimulateTimingAndMetadataUpdate(
     const PageLoadTiming& timing,
     const PageLoadMetadata& metadata) {
-  observer_->OnMessageReceived(PageLoadMetricsMsg_TimingUpdated(
-                                   observer_->routing_id(), timing, metadata),
-                               web_contents()->GetMainFrame());
+  observer_->OnTimingUpdated(web_contents()->GetMainFrame(), timing, metadata);
 }
 
 void PageLoadMetricsObserverTestHarness::SimulateStartedResource(
